styles.css
body {
	font-family: monospace;
	margin: 20px 40px;
	max-width: 1000px;
}

a {
	color: #aaa;
}

.sitemaplink {
	color: #666;
}

h5 {
	font-size: 0.75rem;
	padding-top: 10px;
	margin-top: 50px;
	border-top: solid gray 3px;
}

h6 {
	font-size: 0.6rem;
	padding-top: 5px;
	border-top: solid #ddd 1px;
	color: #999;
}

.lh {
	font-size: 0.75rem;
	margin-left: -20px;
	font-weight: bold;
}

blockquote {
	color: #999;
}

@media (max-width: 480px) {
  blockquote {
    margin-left: 0;
  }
}

ul {
	list-style-type: square;
}

img {
	max-width: 100%;
	height: auto;
}

table {
	width: 600px
}

table {
	border: solid black 2px;
}

.seqP {
	font-size: 1rem;
	height: 1.8rem;
	margin-top: 0px;
	margin-bottom: 0.5rem;
	word-wrap: break-word;
}

.map {
	border: solid black 2px;
	height: 50px;
	padding: 10px;
	text-align: center;
	max-width: 150px;
}

.button {
	border: solid #ddd 2px;
	padding: 5px;
}
.button:hover {
	border: solid #aaa 3px;
}

/* Tooltip container */
.tt {
	position: relative;
	display: inline-block;
}

/* Tooltip text */
.tt .ttt {
	visibility: hidden;
	min-width: 500px;
	background-color: black;
	color: #fff;
	text-align: left;
	padding: 10px;
	border-radius: 6px;

	/* Position the tooltip text - see examples below! */
	position: absolute;
	z-index: 1;
}

.ttt {
	font-size: 0.75rem;
	font-weight: normal;
}

/* Show the tooltip text when you mouse over the tooltip container */
.tt:hover .ttt {
	visibility: visible;
}

